--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "homepage": "https://github.com/hfm-an/blog#readme",
   "dependencies": {
     "koa": "^2.5.3",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "koa-views": "^6.1.4",
+    "nunjucks": "^3.1.4"
   }
 }
